--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bella Cucina</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,7 @@
 <body>
     <header class="navbar navbar-expand-lg sticky-top p-4 py-3" id="cabecalho">
         <div class="container">
-            <h1 class="navbar-brand m-0 section-title">Cinelli Gastro</h1>
+            <h1 class="navbar-brand m-0 section-title">Bella Cucina</h1>
             <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu-navegacao">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -56,10 +56,10 @@
                         <img src="images/slides/interior.png" alt="Foto do espaço interno do restaurante">
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="images/slides/massas.png" alt="Duas taças de vinho">
+                        <img src="images/slides/massas.png" alt="Uma mesa com comida">
                     </div>
                     <div class="carousel-item" data-bs-interval="3000">
-                        <img src="images/slides/adega.png" alt="Uma mesa com comida">
+                        <img src="images/slides/adega.png" alt="Uma adega de vinhos">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
@@ -78,22 +78,19 @@
                 <div class="container">
                     <div class="row">
                         <div class="col md-5">
-                            <img src="images/restaurante.jpg" class="d-block w-100 rounded" alt="Foto do espaço interno do restaurante">
+                            <img src="images/restaurante.png" class="d-block w-100 rounded stretch-img-vertically" alt="Foto do logo do restaurante">
                         </div>
                         <div class="col-md-7 mt-3 mt-md-0">
-                            <h2 class="section-title">Sobre <span class="text-colored-restaurante">o restaurante</span></h2>
-                            <p class="p-restaurante">
-                                loren ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac libero nec nunc
+                            <h2 class="section-title mb-4">Sobre <span class="text-colored-restaurante">a Bella Cucina</span></h2>
+                            <p class="p-restaurante mb-4">
+                                Bem-vindo ao Bella Cucina, onde o coração da Itália palpita no centro de nosso restaurante. Aqui, cada prato conta uma história, trazida à vida com receitas tradicionais passadas através de gerações e reimaginadas com um toque contemporâneo. Em Bella Cucina, celebramos a riqueza e a diversidade da culinária italiana, desde as massas artesanais e pizzas crocantes até os frutos do mar frescos e os risotos perfeitamente cremosos.<br>
+                                <br>
+                                Nosso cardápio é uma celebração da diversidade gastronômica italiana, desde antipastos meticulosamente preparados até massas artesanais, pizzas crocantes assadas em forno a lenha, suculentos pratos de carne e peixe, e, claro, as deliciosas sobremesas que encerram a refeição em grande estilo. Acompanhados de uma seleção impecável de vinhos italianos, seus momentos aqui são mais que uma refeição, são uma verdadeira festa para os sentidos.
                             </p>
-                            <h3 class="section-title">Sobre <span class="text-colored-restaurante">o espaço</span></h3>
+                            <h3 class="section-title mb-4">Sobre <span class="text-colored-restaurante">o espaço</span></h3>
                             <p class="p-espaco">
-                                loren ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac libero nec nunc
+                                Nossa paixão vai além da comida. Nosso espaço é uma homenagem à beleza e ao estilo de vida italiano, criando um ambiente onde a elegância casual encontra o aconchego. A cada visita, você é convidado a experimentar o Dolce Far Niente — a doçura de não fazer nada — seja degustando um copo de vinho selecionado de nossa extensa adega, desfrutando de uma refeição lenta em companhia querida, ou se deleitando com nossos sobremesas divinas, como o tiramisù clássico e o gelato caseiro.
                             </p>
-                            <ul class="itens">
-                                <li>Item 1</li>
-                                <li>Item 2</li>
-                                <li>Item 3</li>
-                            </ul>
                         </div>
                     </div>
                 </div>
@@ -108,33 +105,33 @@
                 </div>
                 <div class="row mt-4">
                     <div class="col-md-4">
-                        <img src="images/eventos/aniversario.jpg" alt="" class="d-block w-100 rounded">
-                        <h3 class="section-title text-colored-especialidades fs-4 mt-4 mb-4">
+                        <img src="images/eventos/massas.png" alt="" class="d-block w-100 rounded">
+                        <h3 class="section-title text-colored-especialidades text-center fs-4 mt-4 mb-4">
                             <i class="bi bi-calendar-heart-fill"></i>
-                            Aniversários
+                            Massas
                         </h3>
                         <p class="p-especialidades">
-                            loren ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac libero nec nunc
+                            Uma verdadeira jornada pelos sabores autênticos da Itália, onde cada garfada é uma história contada através de ingredientes selecionados e amor pela culinária. Nossa seleção de massas representa o melhor da tradição italiana, confeccionada com paixão e perfeição. Desde o clássico e sempre amado Spaghetti Carbonara, com seu equilíbrio perfeito entre queijo pecorino romano e pancetta, até o delicado Ravioli di Spinaci, recheado com espinafre fresco e ricota cremosa, cada prato é uma obra de arte.
                         </p>
                     </div>
                     <div class="col-md-4">
-                        <img src="images/eventos/casamento.jpg" alt="" class="d-block w-100 rounded">
-                        <h3 class="section-title text-colored-especialidades fs-4 mt-4 mb-4">
+                        <img src="images/eventos/pizzas.png" alt="" class="d-block w-100 rounded">
+                        <h3 class="section-title text-colored-especialidades text-center fs-4 mt-4 mb-4">
                             <i class="bi bi-arrow-through-heart-fill"></i>
-                            Casamentos
+                            Pizzas
                         </h3>
                         <p class="p-especialidades">
-                            loren ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac libero nec nunc
+                            Em nossa busca pela perfeição, trazemos até você uma seleção de pizzas que capturam a essência da autêntica cozinha italiana. Feitas com paixão e precisão, nossas pizzas são um reflexo do amor italiano por sabores simples, mas extraordinários. Da clássica Margherita, com sua base de molho de tomate vibrante, coberta por mozzarella de búfala e folhas frescas de manjericão, à rica e saborosa Pepperoni, cada pizza é uma celebração da culinária italiana.
                         </p>
                     </div>
                     <div class="col-md-4">
-                        <img src="images/eventos/confraternizacoes.jpg" alt="" class="d-block w-100 rounded">
-                        <h3 class="section-title text-colored-especialidades fs-4 mt-4 mb-4">
+                        <img src="images/eventos/vinhos.png" alt="" class="d-block w-100 rounded">
+                        <h3 class="section-title text-colored-especialidades text-center fs-4 mt-4 mb-4">
                             <i class="bi bi-people-fill"></i>
-                            Confraternizações
+                            Vinhos
                         </h3>
                         <p class="p-especialidades">
-                            loren ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac libero nec nunc
+                            Nossa paixão pelos sabores autênticos da Itália se estende à nossa seleção exclusiva de vinhos, cuidadosamente escolhidos para complementar a riqueza da culinária italiana. Cada vinho em nossa carta foi selecionado com o intuito de criar harmonizações perfeitas com nossos pratos, elevando sua experiência gastronômica a um novo patamar. Desde os robustos e complexos Barolos até os frescos e frutados Pinot Grigios, nossa coleção abrange a diversidade e a riqueza dos vinhos italianos.
                         </p>
                     </div>
                 </div>
@@ -357,26 +354,26 @@
             <div class="container">
                 <div class="row">
                     <h2 class="section-title text-center mb-5">
-                        Fale <span class="text-colored">conosco</span>
+                        Fale <span class="text-colored-fale-conosco">conosco</span>
                     </h2>
                 </div>
                 <div class="row">
                     <div class="col-md-7 mb-5">
                         <form>
                             <div class="mb-3">
-                                <label for="nome" class="form-label fw-bold text-colored">Seu nome</label>
+                                <label for="nome" class="form-label fw-bold text-colored-fale-conosco">Seu nome</label>
                                 <input type="text" id="nome" class="form-control" required>
                             </div>
                             <div class="mb-3">
-                                <label for="email" class="form-label fw-bold text-colored">Seu e-mail</label>
+                                <label for="email" class="form-label fw-bold text-colored-fale-conosco">Seu e-mail</label>
                                 <input type="email" id="email" class="form-control" required>
                             </div>
                             <div class="mb-3">
-                                <label for="telefone" class="form-label fw-bold text-colored">Seu telefone (opcional)</label>
+                                <label for="telefone" class="form-label fw-bold text-colored-fale-conosco">Seu telefone (opcional)</label>
                                 <input type="tel" id="telefone" class="form-control" required>
                             </div>
                             <div class="mb-3">
-                                <label for="mensagem" class="form-label fw-bold text-colored">Sua mensagem</label>
+                                <label for="mensagem" class="form-label fw-bold text-colored-fale-conosco">Sua mensagem</label>
                                 <textarea id="mensagem" class="form-control" required></textarea>
                             </div>
                             <button type="submit" class="btn fw-bold">Enviar</button>
@@ -384,34 +381,34 @@
                     </div>
                     <div class="col-md-5 text-center">
                         <div class="row">
-                            <h3 class="section-title fs-4 text-colored">
+                            <h3 class="section-title fs-4 text-colored-fale-conosco">
                                 <i class="bi bi-hand-thumbs-up-fill"></i>
                                 Redes sociais
                             </h3>
                             <ul class="social-links">
                                 <li class="fs-5">
                                     <a href="#">
-                                        <i class="bi bi-facebook text-colored"></i>
+                                        <i class="bi bi-facebook text-colored-fale-conosco"></i>
                                     </a>
                                 </li>
                                 <li class="fs-5 ms-1 me-1">
                                     <a href="#">
-                                        <i class="bi bi-instagram text-colored"></i>
+                                        <i class="bi bi-instagram text-colored-fale-conosco"></i>
                                     </a>
                                 </li>
                                 <li class="fs-5">
                                     <a href="#">
-                                        <i class="bi bi-whatsapp text-colored"></i>
+                                        <i class="bi bi-whatsapp text-colored-fale-conosco"></i>
                                     </a>
                                 </li>
                             </ul>
                         </div>
                         <div class="row mt-4">
-                            <h3 class="section-title fs-4 text-colored">
+                            <h3 class="section-title fs-4 text-colored-fale-conosco">
                                 <i class="bi bi-cursor-fill"></i>
                                 Endereço
                             </h3>
-                            <p>
+                            <p class="p-fale-conosco">
                                 Rua teste Exemplo nº 145, Bairro Bootstrap - São Paulo - SP
                             </p>
                         </div>
