--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col md-5">
-                            <img src="images/restaurante.png" class="d-block w-100 rounded stretch-img-vertically" alt="Foto da logo do restaurante">
+                            <img src="images/restaurante.png" class="d-block w-100 rounded img-center-tablet" alt="Foto da logo do restaurante">
                         </div>
                         <div class="col-md-7 mt-3 mt-md-0">
                             <h2 class="section-title mb-4">Sobre <span class="text-colored-restaurante">a Bella Cucina</span></h2>
@@ -140,7 +140,7 @@
         <section id="cardapio" class="pt-5 pb-5">
             <div class="container">
                 <div class="row">
-                    <h2 class="section-title text-center mb-5">
+                    <h2 class="section-title text-center mb-5 mb-reduced"> 
                         Nosso <span class="text-colored-cardapio-titulo">cardápio</span>
                     </h2>
                 </div>
@@ -150,7 +150,7 @@
                             <button type="button" data-bs-toggle="tab" data-bs-target="#bebidas" class="fw-bold text-center nav-link text-colored-cardapio active py-2 px-0">Bebidas</button>
                             <button type="button" data-bs-toggle="tab" data-bs-target="#massas" class="fw-bold text-center nav-link text-colored-cardapio py-2 px-0">Massas</button>
                             <button type="button" data-bs-toggle="tab" data-bs-target="#pizzas" class="fw-bold text-center nav-link text-colored-cardapio py-2 px-0">Pizzas</button>
-                            <button type="button" data-bs-toggle="tab" data-bs-target="#sobremesas" class="fw-bold text-center nav-link text-colored-cardapio py-2 px-0">Sobremesas</button>
+                            <button type="button" data-bs-toggle="tab" data-bs-target="#sobremesas" class="fw-bold text-center nav-link text-colored-cardapio py-2 px-0 mb-increased">Sobremesas</button>
                         </nav>
                     </aside>                    
                     </aside>
