--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
                             <img src="images/restaurante.png" class="d-block w-100 rounded img-center-tablet" alt="Foto da logo do restaurante">
                         </div>
                         <div class="col-md-7 mt-3 mt-md-0">
-                            <h2 class="section-title mb-4">Sobre <span class="text-colored-restaurante">a Bella Cucina</span></h2>
+                            <h2 class="section-title mb-4 text-center">Sobre <span class="text-colored-restaurante">a Bella Cucina</span></h2>
                             <p class="p-restaurante mb-4">
                                 Bem-vindo ao Bella Cucina, onde o coração da Itália palpita no centro de nosso restaurante. Aqui, cada prato conta uma história, trazida à vida com receitas tradicionais passadas através de gerações e reimaginadas com um toque contemporâneo. Em Bella Cucina, celebramos a riqueza e a diversidade da culinária italiana, desde as massas artesanais e pizzas crocantes até os frutos do mar frescos e os risotos perfeitamente cremosos.<br>
                                 <br>
                                 Nosso cardápio é uma celebração da diversidade gastronômica italiana, desde antipastos meticulosamente preparados até massas artesanais, pizzas crocantes assadas em forno a lenha, suculentos pratos de carne e peixe, e, claro, as deliciosas sobremesas que encerram a refeição em grande estilo. Acompanhados de uma seleção impecável de vinhos italianos, seus momentos aqui são mais que uma refeição, são uma verdadeira festa para os sentidos.
                             </p>
-                            <h3 class="section-title mb-4">Sobre <span class="text-colored-restaurante">o espaço</span></h3>
+                            <h3 class="section-title mb-4 text-center">Sobre <span class="text-colored-restaurante">o espaço</span></h3>
                             <p class="p-espaco">
                                 Nossa paixão vai além da comida. Nosso espaço é uma homenagem à beleza e ao estilo de vida italiano, criando um ambiente onde a elegância casual encontra o aconchego. A cada visita, você é convidado a experimentar o Dolce Far Niente — a doçura de não fazer nada — seja degustando um copo de vinho selecionado de nossa extensa adega, desfrutando de uma refeição lenta em companhia querida, ou se deleitando com nossos sobremesas divinas, como o tiramisù clássico e o gelato caseiro.
                             </p>
@@ -437,7 +437,7 @@
                                 <i class="bi bi-hand-thumbs-up-fill"></i>
                                 Redes sociais
                             </h3>
-                            <ul class="social-links">
+                            <ul class="social-links mt-2">
                                 <li class="fs-5">
                                     <a href="#">
                                         <i class="bi bi-facebook text-colored-fale-conosco"></i>
@@ -460,8 +460,8 @@
                                 <i class="bi bi-cursor-fill"></i>
                                 Endereço
                             </h3>
-                            <p class="p-fale-conosco">
-                                Rua teste Exemplo nº 145, Bairro Bootstrap - São Paulo - SP
+                            <p class="p-fale-conosco mt-2">
+                                Rua Molde Exemplo nº 145, Bairro Restaurante - Rio de Janeiro - RJ
                             </p>
                         </div>
                     </div>
