--- a/index.html
+++ b/index.html
@@ -470,9 +470,10 @@
         </section>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="menu.js"></script>
     <footer class="text-center mt-5 py-2 footer-background">
         <p>&copy; 2024 <a href="https://github.com/RodCinelli" class="github-link"
                 style="text-decoration: underline;">Rodrigo Cinelli</a>. Todos os direitos reservados.</p>
-    </footer>    
+    </footer>      
 </body>
 </html>
